Added left sidebar to main page. Fine-tuned the boxes/coloring to look just right.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
-        <li><a href="./recipes/ravioli.html">Ravioli Recipe</a></li>
-    </ul>
+    <div class="left-body">
+        <!--
+            Add cool stuff in left menu
+        -->
+        <p>This is a text where stuff is written so that the cool side bar looks amazing. Surely some very interesting content will fill this place in the future.</p>
+        <button id="nice-button">Very Nice Button</button>
+    </div>
+    <div class="middle-body">
+        <div class="title">
+            <h1>Odin Recipes</h1>
+        </div>
+        <ul class="recipes">
+            <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+            <li><a href="./recipes/ravioli.html">Ravioli Recipe</a></li>
+        </ul>
+        <figure class="food-image">
+            <img src="./images/foods.jpg" alt="Many Foods">
+            <figcaption>This is a picture of many foods looking most delectable.</figcaption>
+        </figure>
+    </div>
 </body>
 </html>
