--- a/recipes/ravioli.html
+++ b/recipes/ravioli.html
@@ -5,18 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ravioli</title>
+    <link rel="stylesheet" href="../style.css"/>
 </head>
 <body>
-    <a href="../index.html">Home</a>
-    <h1>Ravioli Recipe</h1>
-    <img src="../images/Ravioli.webp">
-    <h3>A steaming hot serving of Ravioli</h3>
-    <ol>
-        <li>Mix ricotta, garlic, herbs and lemon zest</li>
-        <li>Fry spinach until collapse</li>
-        <li>Consolidate spinach and mix, spread unto pasta patches</li>
-        <li>Paint eggwhite along the edge of the patches, then fold a second patch on top of it and seal</li>
-        <li>Boil until the pasta is tender, and serve</li>
+    <div>
+        <a href="../index.html">Home</a>
+        <h1>Ravioli Recipe</h1>
+        <img src="../images/Ravioli.webp">
+        <h3>A steaming hot serving of Ravioli</h3>
+        <ol>
+            <li>Mix ricotta, garlic, herbs and lemon zest</li>
+            <li>Fry spinach until collapse</li>
+            <li>Consolidate spinach and mix, spread unto pasta patches</li>
+            <li>Paint eggwhite along the edge of the patches, then fold a second patch on top of it and seal</li>
+            <li>Boil until the pasta is tender, and serve</li>
+    </div>
     </ol>
 </body>
 </html>
